--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+/config/crawl_info.yml
 
 # byebug_history
 .byebug_history
