--- a/config/database.yml
+++ b/config/database.yml
@@ -20,4 +20,7 @@ test:
   <<: *default
 
 production:
-  <<: *default
+  adapter: oracle_enhanced
+  database: INFO_PROD
+  username: info
+  password: info
