--- a/config/test_data.yml
+++ b/config/test_data.yml
@@ -16,7 +16,7 @@ casos_solicitudes:
       telefono2: null
       telefono_whatsapp: '59170513586'
       pagina_web: null
-      servicios: 'DISEÑO Y DESARROLLO DE SOFTWARE EN EL ÁREA DE SISTEMAS DE INFORMACIÓN GEOGRAÁFICA, SERVICIOS INFORMÁTICOS, ALOJAMIENTO DE PAGINAS WEB, PUBLICIDAD POR INTERNET, PUBLICIDAD POR CELULARES Y/O TELÉFONOS MOVILES, PUBLICIDAD POR TRANSPORTE PÚBLICO , SERVICIO DE LOCALIZACIÓN GEOGRÁFICA, INFORMACIÓN GEOREFERENCIADA, CONSULTORÍAS RELATIVAS A LA MATERIA Y CUALQUIER OTRO SERVICIO EN EL RAMO'
+      servicios: 'DISEÑO Y DESARROLLO DE SOFTWARE EN EL ÁREA DE SISTEMAS DE INFORMACIÓN GEOGRÁFICA, SERVICIOS INFORMÁTICOS, ALOJAMIENTO DE PAGINAS WEB, PUBLICIDAD POR INTERNET, PUBLICIDAD POR CELULARES Y/O TELÉFONOS MOVILES, PUBLICIDAD POR TRANSPORTE PÚBLICO , SERVICIO DE LOCALIZACIÓN GEOGRÁFICA, INFORMACIÓN GEOREFERENCIADA, CONSULTORÍAS RELATIVAS A LA MATERIA Y CUALQUIER OTRO SERVICIO EN EL RAMO'
       contacto: null
       email: 'hclazarte@hotmail.com'
       documentos_validados: 0
